# matplotlib

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  data.h  graphlib  main.cc  matrix-plot.cc  matrix-plot.h  mgl.h  notes.txt
